GIA-212 Implement JWT authentication